fix navbar and content visibility

--- a/frontend/src/components/AddNewBook/NewBookSearchbar.css
+++ b/frontend/src/components/AddNewBook/NewBookSearchbar.css
@@ -1,43 +1,3 @@
-.information-wrapper {
-  text-align: center;
-  margin-top: 5px;
-}
-
-.information-title {
-  font-size: 1rem;
-  font-weight: bold;
-}
-
-.information-author {
-  font-size: 1rem;
-}
-
-.information-publisher {
-  font-size: 1rem;
-}
-
-information-category {
-  font-size: 1rem;
-}
-
-.description-text {
-  text-align: center;
-  font-size: 0.88rem;
-  margin: 20px 14px 10px;
-}
-
-span {
-  font-weight: bold;
-}
-
-.checkbox-wrapper {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  margin-top: 0;
-}
-
 .btn-primary-wrapper {
   display: flex;
   justify-content: center;
