--- a/frontend/src/components/BookDetails/BookDetails.css
+++ b/frontend/src/components/BookDetails/BookDetails.css
@@ -6,11 +6,42 @@
   margin-top: 10px;
   margin-bottom: 20px;
   overflow-y: auto;
-  max-height: calc(100vh - 130px);
 }
 
 .book-img {
   width: 200px;
   height: 200px;
   object-fit: contain;
+}
+
+.information-wrapper {
+  text-align: center;
+  margin-top: 5px;
+}
+
+.information-title {
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+.information-author {
+  font-size: 1.2rem;
+}
+
+.information-publisher {
+  font-size: 1.2rem;
+}
+
+.information-category {
+  font-size: 1.2rem;
+}
+
+.description-text {
+  text-align: center;
+  font-size: 1.2rem;
+  margin: 20px 14px 10px;
+}
+
+span {
+  font-weight: bold;
 }
